--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,45 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 2
+    <ion-title align="center">
+      Courses
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-content fullscreen>
+      <!-- <ion-list-header>
+        <ion-label>
+          Single Selection
+        </ion-label>
+      </ion-list-header> -->
+    
+      <ion-item>
+        <ion-label>Choose Course</ion-label>
+         <ion-select interface="popover"  (ionChange)="onCourseChange($event)">
+          <ion-select-option *ngFor="let item of coursesData;" value="{{ item.id }}">{{ item.fullname }}</ion-select-option>
+        </ion-select>
+      </ion-item>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
-</ion-content>
+  <ion-card *ngIf="chosenCourseFullName !== ''">
+      <ion-icon name="book-outline" className="center-right" size="large"></ion-icon>
+      <ion-card-header>
+        <ion-card-title><div *ngIf="chosenCourseFullName !== ''">{{chosenCourseFullName}}</div></ion-card-title>
+      </ion-card-header>
+      <ion-card-content >
+        <!-- <div *ngIf="$event.detail.value !== item.id " >{{item.summary}}</div> -->
+        <div *ngIf="chosenCourseSummary !== ''">{{chosenCourseSummary}}</div>
+      </ion-card-content>
+    </ion-card>
+
+    <div *ngIf="chosenCourseFullName !== ''">
+    <ion-card *ngFor="let item of courseDetailsData;">
+      <ion-card-header>
+        <ion-card-title>{{item.name}}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content >
+        {{ item.summary }}
+      </ion-card-content>
+    </ion-card>
+    </div>
+  
+  </ion-content>
