Added 1. Open File from File Activity type 2. Button to Mark Activity status: complete and not-complete

--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -6,3 +6,9 @@ ion-card-header { position: relative }
     transform: translateY(-50%);
     size: 10px;
 }
+
+button.activitybtn {
+    --background : gray;
+    --background-activated: red;
+}
+
