--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -38,12 +38,30 @@
       </ion-card-header>
       <ion-card-content >
         {{ item.summary }}
-        <ion-list *ngFor="let module of toArray(item.modules); let j=index;">
-          <button ion-item (click)="onModuleClick(i,j)">
+        <ion-list>
+          <ion-item *ngFor="let module of toArray(item.modules); let j=index;">
+            <ion-button ion-item (click)="onModuleClick(i,j)" class="activitynamebtn">
             <img [src]= 'module.modicon'/>
             {{ module.name }}
-          </button>
-          </ion-list>
+            </ion-button>
+            <ng-container  *ngIf="courseDetailsData[i].modules[j].completion">
+            <ng-container *ngIf="courseDetailsData[i].modules[j].completiondata.state">
+              <ion-button color="success" fill="outline" 
+                  (click)="completionClicked(i,j)">
+                  <ion-icon name="checkmark-outline"></ion-icon>
+                  <ion-label>Done</ion-label>
+              </ion-button>
+          </ng-container>
+          <ng-container *ngIf="!courseDetailsData[i].modules[j].completiondata.state">
+              <ion-button color="light" (click)="completionClicked(i,j)">
+                <ion-label>Mark done</ion-label>
+              </ion-button>
+          </ng-container>
+        </ng-container>
+
+
+          </ion-item>
+        </ion-list>
       </ion-card-content>
     </ion-card>
     </div>
