Newly added 1. Download and display H5P files (yahoooo)
Pending for later.
1. Do not download file if already downloaded
2. Save state of activity when returning
3. Listen to xAPI to get student performance data

--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -19,5 +19,9 @@
     <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser"/>
   </feature>
 
+  <feature name="Zip">
+    <param name="android-package" value="org.apache.cordova.Zip"/>
+  </feature>
+
   
 </widget>
