Feature added: 1. Ability to join BigBlueButton meetings (after initial porocessing, loads the videocon on Chrome as BBB HTML5Client only allows that)

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -57,6 +57,11 @@
                 <ion-label>Mark done</ion-label>
               </ion-button>
           </ng-container>
+          <ng-container *ngIf="(bbbChosenModuleName == courseDetailsData[i].modules[j].name && courseDetailsData[i].modules[j].modname =='bigbluebuttonbn')">
+            <ion-button color="light" (click)="BBBJoinBtnclicked(i,j)">
+              <ion-label>Join Meeting</ion-label>
+            </ion-button>
+        </ng-container>
         </ng-container>
 
 
