Added features 1. Moved BBB to separate Page which has the Join Button. 2. Added Notifications from Calendar to Home Tab. 3. Clicking BBB Join button on Home tab leads to BBB page.
Pending
1. BBB Page to have more details.
2. Add Assignment activity page and send Home tab Assignment button click to this page.

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,6 +13,12 @@
     </ion-toolbar>
   </ion-header>
 
-  
-  
+  <ion-card *ngFor="let item of events; let i=index;">
+      <ion-card-header>
+        <ion-card-title color="secondary">{{item.name}}</ion-card-title>
+      </ion-card-header>
+      <ion-button (click)="eventActionButtonClicked(i)">
+        {{item.action.name}}
+      </ion-button>
+  </ion-card>
 </ion-content>
