Recent changes 1. Moved most of the Moodle Web Services calls to one Service file. Earlier there was a separate Service file for each WS call. This was done to reduce the number of code files.
2. Added comments to make parts of the Code easier to understand.

3. Removed some commented out junk code which was done while trying out different things.
These were no more needed.

--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -21,7 +21,8 @@
         <ion-col>
           <ion-button color="primary" expand="full" color="primary" (click)="login()">Login</ion-button>
         </ion-col>
-       <!--  <ion-col>
+       <!--  Registration is currently hidden
+         <ion-col>
           <ion-button color="primary" expand="full" color="danger" (click)="register()">Register</ion-button>
         </ion-col> -->
       </ion-row>
