--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -20,6 +20,7 @@
   
     <ion-button type="submit" expand="full" color="primary">Login</ion-button>
   </form>
-  <!-- <p text-center>Don't have an account?</p>
+  <!-- Registration has been hidden for now 
+    <p text-center>Don't have an account?</p>
   <ion-button expand="full" color="danger" (click)="registerModal()">Register</ion-button> -->
 </ion-content>
