--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -26,6 +26,9 @@
       <ion-item>
         <ion-label>Support</ion-label>
       </ion-item>
+      <ion-button  (click)="logout()">
+        Logout
+      </ion-button>
       </ion-list>
 </ion-card>
 </ion-content>
