--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,14 +1,18 @@
-ion-card-header { position: relative }
-.center-right{
-    position: absolute;
-    top: 50%;
-    right: 0px;
-    transform: translateY(-50%);
-    size: 10px;
+ion-card-header {
+  position: relative;
+}
+.center-right {
+  position: absolute;
+  top: 50%;
+  right: 0px;
+  transform: translateY(-50%);
+  size: 10px;
 }
 
 button.activitybtn {
-    --background : gray;
-    --background-activated: red;
+  --background: gray;
+  --background-activated: red;
 }
-
+ion-icon.md.icon-large.hydrated {
+  margin-left: 18px;
+}
