--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -34,3 +34,6 @@ ion-button.md.button.button-solid.ion-activatable.ion-focusable.hydrated {
 ion-button.md.button.button-solid.ion-activatable.ion-focusable.hydrated {
   min-width: 180px;
 }
+ion-title.md.title-default.hydrated {
+  text-align: center;
+}
