--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,72 +1,92 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title align="center">
-      Courses
-    </ion-title>
+    <ion-title align="center"> Courses </ion-title>
   </ion-toolbar>
 </ion-header>
 
-  <ion-content fullscreen>
-      <!-- <ion-list-header>
+<ion-content fullscreen>
+  <!-- <ion-list-header>
         <ion-label>
           Single Selection
         </ion-label>
       </ion-list-header> -->
-    
-      <ion-item>
-        <!-- Dropdown for Choosing Course-->
-        <ion-label>Choose Course</ion-label>
-         <ion-select interface="popover"  (ionChange)="onCourseChange($event)">
-          <ion-select-option *ngFor="let item of coursesData;" value="{{ item.id }}">{{ item.fullname }}</ion-select-option>
-        </ion-select>
-      </ion-item>
+
+  <ion-item>
+    <!-- Dropdown for Choosing Course-->
+    <ion-label>Choose Course</ion-label>
+    <ion-select interface="popover" (ionChange)="onCourseChange($event)">
+      <ion-select-option *ngFor="let item of coursesData;" value="{{ item.id }}"
+        >{{ item.fullname }}</ion-select-option
+      >
+    </ion-select>
+  </ion-item>
 
   <!-- Details of Chosen course -->
   <ion-card *ngIf="chosenCourseFullName !== ''">
-      <ion-icon name="book-outline" className="center-right" size="large"></ion-icon>
-      <ion-card-header>
-        <ion-card-title><div *ngIf="chosenCourseFullName !== ''">{{chosenCourseFullName}}</div></ion-card-title>
-      </ion-card-header>
-      <ion-card-content >
-        <!-- <div *ngIf="$event.detail.value !== item.id " >{{item.summary}}</div> -->
-        <div *ngIf="chosenCourseSummary !== ''">{{chosenCourseSummary}}</div>
-      </ion-card-content>
-    </ion-card>
+    <ion-icon
+      name="book-outline"
+      className="center-right"
+      size="large"
+    ></ion-icon>
+    <ion-card-header>
+      <ion-card-title
+        ><div *ngIf="chosenCourseFullName !== ''">
+          {{chosenCourseFullName}}
+        </div></ion-card-title
+      >
+    </ion-card-header>
+    <ion-card-content>
+      <!-- <div *ngIf="$event.detail.value !== item.id " >{{item.summary}}</div> -->
+      <div *ngIf="chosenCourseSummary !== ''">{{chosenCourseSummary}}</div>
+    </ion-card-content>
+  </ion-card>
 
-    <!-- List of Sections of the Chosen Course-->
-    <div *ngIf="chosenCourseFullName !== ''">
+  <!-- List of Sections of the Chosen Course-->
+  <div *ngIf="chosenCourseFullName !== ''">
     <ion-card *ngFor="let item of courseDetailsData; let i=index;">
       <ion-card-header>
         <ion-card-title>{{item.name}}</ion-card-title>
       </ion-card-header>
-      <ion-card-content >
+      <ion-card-content>
         {{ item.summary }}
         <!-- List of Activities/Modules within each Section of the chosen Course-->
         <ion-list>
-          <ion-item *ngFor="let module of toArray(item.modules); let j=index;">
-            <ion-button ion-item (click)="onModuleClick(i,j)" class="activitynamebtn">
-            <img [src]= 'module.modicon'/>
-            {{ module.name }}
+          <ion-item
+            *ngFor="let module of toArray(item.modules); let j=index;"
+            class="{{courseDetailsData[i].modules[j].modname}}"
+          >
+            <ion-button
+              ion-item
+              (click)="onModuleClick(i,j)"
+              class="activitynamebtn"
+            >
+              <img [src]="module.modicon" />
+              {{ module.name }}
             </ion-button>
-            <ng-container  *ngIf="courseDetailsData[i].modules[j].completion">
-            <ng-container *ngIf="courseDetailsData[i].modules[j].completiondata.state">
-              <ion-button color="success" fill="outline" 
-                  (click)="completionClicked(i,j)">
+            <!-- <ng-container *ngIf="courseDetailsData[i].modules[j].completion">
+              <ng-container
+                *ngIf="courseDetailsData[i].modules[j].completiondata.state"
+              >
+                <ion-button
+                  color="success"
+                  fill="outline"
+                  (click)="completionClicked(i,j)"
+                >
                   <ion-icon name="checkmark-outline"></ion-icon>
                   <ion-label>Done</ion-label>
-              </ion-button>
-          </ng-container>
-          <ng-container *ngIf="!courseDetailsData[i].modules[j].completiondata.state">
-              <ion-button color="light" (click)="completionClicked(i,j)">
-                <ion-label>Mark done</ion-label>
-              </ion-button>
-          </ng-container>
-        </ng-container>
-
-
+                </ion-button>
+              </ng-container>
+              <ng-container
+                *ngIf="!courseDetailsData[i].modules[j].completiondata.state"
+              >
+                <ion-button color="light" (click)="completionClicked(i,j)">
+                  <ion-label>Mark done</ion-label>
+                </ion-button>
+              </ng-container>
+            </ng-container> -->
           </ion-item>
         </ion-list>
       </ion-card-content>
     </ion-card>
-    </div>
-  </ion-content>
+  </div>
+</ion-content>
