--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -16,8 +16,8 @@ button.activitybtn {
 ion-icon.md.icon-large.hydrated {
   margin-left: 18px;
 }
-ion-item.bigbluebuttonbn,
-ion-item.assign,
-ion-item.resource {
-  display: none;
-}
+// ion-item.bigbluebuttonbn,
+// ion-item.assign,
+// ion-item.resource {
+//   display: none;
+// }
